--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,14 +37,16 @@ jobs:
   
       - name: Build
         run: ${{ matrix.env_vars }} go build ${{ matrix.build_args }} -o dist/${{ matrix.artifact_name }}
+        working-directory: fscan
   
       - name: Compress binaries
         run: gzip dist/${{ matrix.artifact_name }}
+        working-directory: fscan
   
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist/${{ matrix.artifact_name }}.gz
+          file: fscan/dist/${{ matrix.artifact_name }}.gz
           asset_name: ${{ matrix.artifact_name }}.gz
           tag: ${{ github.ref }}
