--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,7 @@ jobs:
           git clone https://github.com/shadow1ng/fscan.git
           cd fscan
           git checkout tags/v2.2.0
+          go mod tidy
   
       - name: Set up Go
         uses: actions/setup-go@v4
