--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Upload files to Artifacts
         uses: actions/upload-artifact@v5.0.0
         with:
-          name: zipfile
+          name: ${{ matrix.artifact_name }}.zip
           path: |
             fscan/dist/${{ matrix.artifact_name }}
